<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_results_layout"
            android:title="All Drinks" />
        <item
            android:id="@+id/nav_favorite_type"
            android:title="Favorites" />
        <item
            android:id="@+id/nav_my_drinks"
            android:title="My Drinks"/>
        <item
            android:id="@+id/nav_new_drinks"
            android:title="New Drinks"/>
    </group>

</menu>
